<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ciudades"
        android:background="@color/fondo">


    <TextView
            android:text="@string/texto_bienvenida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/titulo_blanco"
            android:textSize="16sp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGueder"/>

    <TextView
            android:text="@string/gueder_titulo"
            android:layout_width="wrap_content"
            android:textSize="52sp"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_blanco"
            android:id="@+id/tvGueder"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button

            android:text="@string/bt_clima_bsas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_gris"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btClimaBsAs"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="112dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.99"/>

    <Button

            android:text="@string/bt_clima_uru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_gris"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btClimaUru"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btClimaBsAs"
            android:layout_marginEnd="112dp" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.832"/>


    <Button

            android:text="@string/bt_clima_br"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_gris"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btClimaBr"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btClimaUru"
            android:layout_marginEnd="80dp" tools:ignore="DuplicateIds" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.727"/>


    <Button

            android:text="@string/bt_clima_mx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_gris"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btClimaMx"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="104dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btClimaBr"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.803"/>


    <Button

            android:text="@string/bt_clima_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titulo_gris"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btClimaUs"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btClimaMx"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.7"/>

</android.support.constraint.ConstraintLayout>